--- a/full-stack/5-react-fastapi/src/App.css
+++ b/full-stack/5-react-fastapi/src/App.css
@@ -5,26 +5,32 @@
   text-align: center;
 }
 
-.dinosaur {
-  height: 12em;
+.citizen {
+  height: 24em;
   padding: 1.5em;
   will-change: filter;
   transition: filter 300ms;
 }
-.dinosaur.gertie {
-  height: 32em;
+.citizen.users {
+  height: 8em;
 }
-.dinosaur:hover {
+.citizen:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
-.dinosaur.gertie:hover {
+.citizen.users:hover {
   filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-.card {
-  padding: 2em;
+table {
+  margin: 0 auto;
+  border-collapse: collapse;
+  width: 100%;
 }
 
-.read-the-docs {
-  color: #888;
+tr {
+  border-bottom: 1px solid #ddd;
+}
+
+td {
+  padding: 0.5em;
 }
